@@ -11,6 +11,11 @@ PyObjC NEWS</title>
 <p>An overview of the relevant changes in new, and older, releases.</p>
 <h2><a name="version-1-3-1-2005-04">Version 1.3.1 (2005-04-??)</a></h2>
 <ul>
+<li>More conveniences for <code><span>list</span></code>-like and <code><span>dict</span></code>-like
+objects: <code><span>__reversed__</span></code>, <code><span>reverse</span></code>, <code><span>pop</span></code>,
+<code><span>remove</span></code>, <code><span>fromkeys</span></code>.</li>
+<li><code><span>OC_PythonDictionary</span></code> and <code><span>OC_PythonArray</span></code> now return
+<code><span>NSNull</span></code> as appropriate.</li>
 <li>New <code><span>WebKitInterpreter</span></code> example in <code><span>Examples/Plugins</span></code>,
 Uses the new WebKit Cocoa plugin API available in Safari 1.3
 and later to embed a PyInterpreter in the browser.</li>
